management/archive/doggly-nestjs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doggly
  labels:
    name: doggly
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doggly-nestjs
  namespace: doggly
  labels:
    env: dev
    service: doggly
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      service: doggly
  template:
    metadata:
      labels:
        env: dev
        service: doggly
    spec:
      containers:
        - name: doggly-nestjs
          image: 193362923626.dkr.ecr.ap-northeast-2.amazonaws.com/doggly-nestjs:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: doggly-nestjs
  namespace: doggly
  labels:
    env: dev
    service: doggly
spec:
  type: LoadBalancer
  selector:
    env: dev
    service: doggly
  ports:
    - port: 80
      targetPort: 3000
