management/archive/traefik-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-routers
  namespace: example
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: argo.doggly.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-nginx
                port:
                  number: 80
