management/archive/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: snackbar
  labels:
    project: snackbar
spec:
  defaultBackend:
    service:
      name: home
      port:
        number: 80
  rules:
    - host: "api.dev.doggly.co.kr"
      http:
        paths:
          - pathType: Prefix
            path: /order
            backend:
              service:
                name: order
                port:
                  number: 80
    - host: "api.dev.doggly.co.kr"
      http:
        - pathType: Prefix
          path: /payment
          backend:
            service:
              name: payment
              port:
                number: 80
        - pathType: Prefix
          path: /payment
          backend:
            service:
              name: payment
              port:
                number: 80
